--- a/test/index.html
+++ b/test/index.html
@@ -19,12 +19,14 @@
             background: #f8f9fa;
         }
 
-        /* Header mit radialem Verlauf wie im PDF */
+        /* Header mit Parallax wie im PDF */
         header {
-            background: radial-gradient(circle at center, #6a6a6a 0%, #3a3a3a 50%, #1a1a1a 100%);
-            height: 100vh;
+            background-image: linear-gradient(rgba(0,0,0,.65), rgba(0,0,0,.35)), url('../hero.jpg');
+            background-size: cover;
+            background-position: center;
+            background-attachment: fixed;
+            height: 80vh;
             position: relative;
-            overflow: hidden;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -52,74 +54,29 @@
         }
 
         .hero-container {
-            position: relative;
-            width: 100%;
-            height: 100%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            max-width: 1400px;
-        }
-
-        /* We Love Text links */
-        .left-text {
-            position: absolute;
-            left: 10%;
-            top: 50%;
-            transform: translateY(-50%);
+            text-align: center;
             color: white;
-            text-align: left;
-            z-index: 3;
         }
 
-        .left-text h1 {
-            font-size: clamp(3rem, 8vw, 6rem);
-            font-weight: 700;
+        /* "We love coffee" Typography */
+        .hero-title {
+            font-size: clamp(4rem, 8vw, 8rem);
+            font-weight: 300;
+            letter-spacing: 0.1em;
+            text-transform: uppercase;
             line-height: 0.9;
-            text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
             margin: 0;
-        }
-
-        /* Getränk in der Mitte */
-        .center-drink {
-            position: absolute;
-            z-index: 5;
-            animation: float 6s ease-in-out infinite;
-            left: 50%;
-            top: 50%;
-            transform: translate(-50%, -50%);
-        }
-
-        .center-drink img {
-            width: 300px;
-            height: 400px;
-            object-fit: cover;
-            border-radius: 20px;
-            box-shadow: 0 30px 60px rgba(0, 0, 0, 0.4);
-        }
-
-        @keyframes float {
-            0%, 100% { transform: translate(-50%, -50%) translateY(0px) rotate(0deg); }
-            50% { transform: translate(-50%, -50%) translateY(-20px) rotate(2deg); }
-        }
-
-        /* Café Text rechts */
-        .right-text {
-            position: absolute;
-            right: 10%;
-            top: 50%;
-            transform: translateY(-50%);
-            color: white;
-            text-align: right;
-            z-index: 3;
-        }
-
-        .right-text h1 {
-            font-size: clamp(3rem, 8vw, 6rem);
-            font-weight: 700;
-            line-height: 0.9;
             text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
-            margin: 0;
+        }
+
+        /* Zweizeilige Dopplung für Tiefe */
+        .hero-title-duplicate {
+            opacity: 0.3;
+            transform: translate(4px, 4px);
+            position: absolute;
+            top: 0;
+            left: 0;
+            z-index: -1;
         }
 
         /* Kleine Asset-Elemente über und unter dem Bagel */
