--- a/test/index.html
+++ b/test/index.html
@@ -19,12 +19,9 @@
             background: #f8f9fa;
         }
 
-        /* Header mit Parallax wie im PDF */
+        /* Header mit radialem Verlauf */
         header {
-            background-image: linear-gradient(rgba(0,0,0,.65), rgba(0,0,0,.35)), url('../hero.jpg');
-            background-size: cover;
-            background-position: center;
-            background-attachment: fixed;
+            background: radial-gradient(circle at center, #074574 0%, #053659 50%, #02243d 100%);
             height: 80vh;
             position: relative;
             display: flex;
