Verbessere das Layout der Sektionen in index.html durch flexibles Design und aktualisiere die Typografie der Produktkarten.

--- a/test/index.html
+++ b/test/index.html
@@ -19,9 +19,9 @@
             background: #EDE8E2;
         }
 
-        /* Hero mit korrektem Gradient */
+        /* Hero mit radialem Gradient */
         header {
-            background: linear-gradient(to bottom, #D4C4B5 0%, #B49A86 100%);
+            background: radial-gradient(circle, #D4C4B5 0%, #B49A86 70%);
             height: 80vh;
             position: relative;
             display: flex;
