--- a/test/index-clean.html
+++ b/test/index-clean.html
@@ -5,109 +5,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Coffee & Food - Test</title>
-    <link rel="stylesheet" href="gallery-new.css">
+    <link rel="stylesheet" href="gallery.css">
     <link rel="stylesheet" href="parallax.css">
-    <link rel="stylesheet" href="product-styles.css">
     <link rel="stylesheet" href="responsive.css">
-    <link rel="stylesheet" href="debug-overlay.css">
 </head>
 
 <body>
 
-    <!-- HAUPTNAVIGATION - OBEN RECHTS -->
-    <nav class="main-navigation">
-        <ul class="nav-menu">
-            <li><a href="#home" class="active">Home</a></li>
-            <li><a href="#speisen">Speisen</a></li>
-            <li><a href="#getraenke">Getränke</a></li>
-            <li><a href="#kontakt">Kontakt</a></li>
-            <li><a href="../impressum.html">Impressum</a></li>
-        </ul>
-    </nav>
-
-    <!-- BURGER MENU für mobile (nur sichtbar auf mobile) -->
-    <div class="burger-menu" style="display: none;">
-        <span></span>
-        <span></span>
-        <span></span>
-    </div>
-
     <header>
         <img src="../assets/logo.svg" alt="BANCO The Café" class="logo">
+        <a href="../" class="nav-link">← Zurück zur Hauptseite</a>
 
-        <!-- UNTERBROCHENE LINIE LINKS (Oberer Teil) -->
-        <div class="left-line-top"></div>
-        
-        <!-- UNTERBROCHENE LINIE LINKS (Unterer Teil) -->
-        <div class="left-line-bottom"></div>
+        <div class="hero-container">
+            <!-- Dekorative Bagels -->
+            <div class="coffee-bean left">
+                <img src="../assets/manhatten_city_plain.webp" alt="Bagel Links">
+            </div>
+            <div class="coffee-bean right">
+                <img src="../assets/vegan_vegas_plain.webp" alt="Bagel Rechts">
+            </div>
 
-        <!-- UNTERBROCHENE LINIE RECHTS (Oberer Teil) -->
-        <div class="right-line-top"></div>
-        
-        <!-- UNTERBROCHENE LINIE RECHTS (Unterer Teil) -->
-        <div class="right-line-bottom"></div>
+            <!-- Zentrales Bowl-PNG mit Parallax -->
+            <div class="center-drink">
+                <img src="../assets/chicken_teriyaki_front.webp" alt="Bowl">
+            </div>
 
-        <!-- SCROLL DOWN TEXT unter linker Linie -->
-        <div class="scroll-text-left">scroll down</div>
+            <!-- "We Love Coffee" Text links -->
+            <div class="hero-text left">
+                <h1 class="hero-title">We Love<br>Coffee</h1>
+            </div>
 
-        <!-- SCROLL DOWN TEXT unter rechter Linie -->
-        <div class="scroll-text-right">scroll down</div>
-
-        <!-- SOCIAL MEDIA ICONS UNTEN LINKS -->
-        <div class="social-icons">
-            <a href="https://instagram.com" target="_blank" title="Instagram">
-                <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
-                    <path
-                        d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z" />
-                </svg>
-            </a>
-            <a href="https://tiktok.com" target="_blank" title="TikTok">
-                <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
-                    <path
-                        d="M19.59 6.69a4.83 4.83 0 0 1-3.77-4.25V2h-3.45v13.67a2.89 2.89 0 0 1-5.2 1.74 2.89 2.89 0 0 1 2.31-4.64 2.93 2.93 0 0 1 .88.13V9.4a6.84 6.84 0 0 0-1-.05A6.33 6.33 0 0 0 5 20.1a6.34 6.34 0 0 0 10.86-4.43v-7a8.16 8.16 0 0 0 4.77 1.52v-3.4a4.85 4.85 0 0 1-1-.1z" />
-                </svg>
-            </a>
-            <a href="#" target="_blank" title="Website">
-                <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
-                    <path
-                        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-1 17.93c-3.94-.49-7-3.85-7-7.93 0-.62.08-1.21.21-1.79L9 15v1c0 1.1.9 2 2 2v1.93zm6.9-2.54c-.26-.81-1-1.39-1.9-1.39h-1v-3c0-.55-.45-1-1-1H8v-2h2c.55 0 1-.45 1-1V7h2c1.1 0 2-.9 2-2v-.41c2.93 1.19 5 4.06 5 7.41 0 2.08-.8 3.97-2.1 5.39z" />
-                </svg>
-            </a>
+            <!-- "We Love Coffee" Text rechts -->
+            <div class="hero-text right">
+                <h1 class="hero-title">We Love<br>Coffee</h1>
+            </div>
         </div>
     </header>
 
-    <div class="hero-container">
-        <!-- Dekorative Bagels -->
-        <div class="coffee-bean left">
-            <img src="../assets/casg.webp" alt="Bagel Links">
-        </div>
-        <div class="coffee-bean right">
-            <img src="../assets/pome.webp" alt="Bagel Rechts">
-        </div>
-
-        <!-- Zentrales Produkt-Bild mit automatischem Wechsel -->
-        <div class="center-drink">
-            <img id="hero-product-image" src="../assets/chicken_teriyaki_front.webp" alt="Bowl" data-product="bowl">
-            <!-- Canvas-basierter Rauch wie auf der Index-Seite -->
-            <div class="smoke">
-                <canvas id="bowl-smoke-canvas"></canvas>
-            </div>
-        </div>
-
-        <!-- "We Love Coffee" Text links -->
-        <div class="hero-text left">
-            <h1 class="hero-title">We love<br>coffee</h1>
-        </div>
-
-        <!-- "We Love Coffee" Text rechts -->
-        <div class="hero-text right">
-            <h2 class="hero-title">We love<br>coffee</h2>
-        </div>
-    </div>
-
     <div class="main-content">
         <!-- Getränke Sektion (Hell) -->
-        <section id="getraenke" class="content-section">
+        <section class="content-section">
             <div class="section-header">
                 <div class="section-info">
                     <h2 class="section-title">Unsere Getränke</h2>
@@ -124,7 +61,7 @@
                 <div class="carousel" id="drinks-carousel">
                     <div class="product-card">
                         <div class="product-image">
-                            <img src="../assets/Gruppe 1.webp" alt="Cappuccino">
+                            <img src="../assets/manhatten_city_plain.webp" alt="Cappuccino">
                         </div>
                         <div class="product-content">
                             <div class="product-name">Cappuccino</div>
@@ -137,7 +74,7 @@
                     </div>
                     <div class="product-card active">
                         <div class="product-image">
-                            <img src="../assets/Gruppe 2.webp" alt="Latte Macchiato">
+                            <img src="../assets/new_york_style_plain.webp" alt="Latte Macchiato">
                         </div>
                         <div class="product-content">
                             <div class="product-name">Latte Macchiato</div>
@@ -150,7 +87,7 @@
                     </div>
                     <div class="product-card">
                         <div class="product-image">
-                            <img src="../assets/Gruppe 3.webp" alt="Espresso">
+                            <img src="../assets/pastrami_deluxe_plain.webp" alt="Espresso">
                         </div>
                         <div class="product-content">
                             <div class="product-name">Espresso</div>
@@ -163,33 +100,7 @@
                     </div>
                     <div class="product-card">
                         <div class="product-image">
-                            <img src="../assets/Gruppe 4.webp" alt="Cold Brew">
-                        </div>
-                        <div class="product-content">
-                            <div class="product-name">Cold Brew</div>
-                            <div class="product-description">Kalt gebrühter Kaffee mit intensivem Aroma</div>
-                            <div class="product-footer">
-                                <span class="product-size">400ml</span>
-                                <span class="product-price">€4,50</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="product-card">
-                        <div class="product-image">
-                            <img src="../assets/Gruppe 5.webp" alt="Cold Brew">
-                        </div>
-                        <div class="product-content">
-                            <div class="product-name">Cold Brew</div>
-                            <div class="product-description">Kalt gebrühter Kaffee mit intensivem Aroma</div>
-                            <div class="product-footer">
-                                <span class="product-size">400ml</span>
-                                <span class="product-price">€4,50</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="product-card">
-                        <div class="product-image">
-                            <img src="../assets/Gruppe 6.webp" alt="Cold Brew">
+                            <img src="../assets/vegan_vegas_plain.webp" alt="Cold Brew">
                         </div>
                         <div class="product-content">
                             <div class="product-name">Cold Brew</div>
@@ -205,7 +116,7 @@
         </section>
 
         <!-- Speisen Sektion (Dunkel) -->
-        <section id="speisen" class="content-section dark">
+        <section class="content-section dark">
             <div class="section-header">
                 <div class="section-info">
                     <h2 class="section-title">Unsere Speisen</h2>
@@ -223,7 +134,7 @@
                     <!-- Bagels -->
                     <div class="product-card">
                         <div class="product-image">
-                            <img src="../assets/manhatten_city_plate.webp" alt="Manhattan City Bagel">
+                            <img src="../assets/manhatten_city_plain.webp" alt="Manhattan City Bagel">
                         </div>
                         <div class="product-content">
                             <div class="product-name">Manhattan City</div>
@@ -236,7 +147,7 @@
                     </div>
                     <div class="product-card active">
                         <div class="product-image">
-                            <img src="../assets/new_york_style_plate.webp" alt="New York Style Bagel">
+                            <img src="../assets/new_york_style_plain.webp" alt="New York Style Bagel">
                         </div>
                         <div class="product-content">
                             <div class="product-name">New York Style</div>
@@ -249,7 +160,7 @@
                     </div>
                     <div class="product-card">
                         <div class="product-image">
-                            <img src="../assets/pastrami_deluxe_plate.webp" alt="Pastrami Deluxe Bagel">
+                            <img src="../assets/pastrami_deluxe_plain.webp" alt="Pastrami Deluxe Bagel">
                         </div>
                         <div class="product-content">
                             <div class="product-name">Pastrami Deluxe</div>
@@ -262,7 +173,7 @@
                     </div>
                     <div class="product-card">
                         <div class="product-image">
-                            <img src="../assets/pastrami_plate.webp" alt="Pastrami Bagel">
+                            <img src="../assets/pastrami_plain.webp" alt="Pastrami Bagel">
                         </div>
                         <div class="product-content">
                             <div class="product-name">Pastrami</div>
@@ -275,7 +186,7 @@
                     </div>
                     <div class="product-card">
                         <div class="product-image">
-                            <img src="../assets/vegan_vegas_plate.webp" alt="Vegan Vegas Bagel">
+                            <img src="../assets/vegan_vegas_plain.webp" alt="Vegan Vegas Bagel">
                         </div>
                         <div class="product-content">
                             <div class="product-name">Vegan Vegas</div>
@@ -290,7 +201,7 @@
                     <!-- Focaccias -->
                     <div class="product-card">
                         <div class="product-image">
-                            <img src="../assets/giuliana_plate.webp" alt="Giuliana Focaccia">
+                            <img src="../assets/giuliana_plain.webp" alt="Giuliana Focaccia">
                         </div>
                         <div class="product-content">
                             <div class="product-name">Giuliana</div>
@@ -303,7 +214,7 @@
                     </div>
                     <div class="product-card">
                         <div class="product-image">
-                            <img src="../assets/italiano_plate.webp" alt="Italiano Focaccia">
+                            <img src="../assets/italiano_plain.webp" alt="Italiano Focaccia">
                         </div>
                         <div class="product-content">
                             <div class="product-name">Italiano</div>
@@ -316,7 +227,7 @@
                     </div>
                     <div class="product-card">
                         <div class="product-image">
-                            <img src="../assets/milano_plate.webp" alt="Milano Focaccia">
+                            <img src="../assets/milano_plain.webp" alt="Milano Focaccia">
                         </div>
                         <div class="product-content">
                             <div class="product-name">Milano</div>
@@ -384,30 +295,10 @@
                 </div>
             </div>
         </section>
-
-        <!-- Kontakt Sektion -->
-        <section id="kontakt" class="content-section dark">
-            <div class="section-header">
-                <div class="section-info">
-                    <h2 class="section-title">Kontakt</h2>
-                    <p class="section-subtitle">Besuchen Sie uns oder kontaktieren Sie uns für Reservierungen.</p>
-                </div>
-            </div>
-            <div style="padding: 40px; text-align: center; color: white;">
-                <h3>BANCO The Café</h3>
-                <p>Musterstraße 123<br>12345 Berlin</p>
-                <p>Telefon: +49 30 12345678<br>Email: info@banco-cafe.de</p>
-                <p>Öffnungszeiten:<br>Mo-Fr: 7:00 - 19:00<br>Sa-So: 8:00 - 18:00</p>
-            </div>
-        </section>
     </div>
 
-    <script src="gallery-new.js"></script>
+    <script src="gallery.js"></script>
     <script src="parallax.js"></script>
-    <script src="bowl-smoke.js"></script>
-    <script src="product-slider.js"></script>
-    <script src="navigation.js"></script>
-    <script src="debug-overlay.js"></script>
 
 </body>
 
