--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="parallax.css">
     <link rel="stylesheet" href="product-styles.css">
     <link rel="stylesheet" href="responsive.css">
-    <link rel="stylesheet" href="debug-overlay.css">
+    <!-- <link rel="stylesheet" href="debug-overlay.css"> -->
     <link rel="stylesheet" href="mobile-menu.css">
     <link rel="stylesheet" href="about-section.css">
     <link rel="stylesheet" href="location-map.css">
@@ -433,7 +433,7 @@
                     </div>
                     <div class="section-info">
                         <h2 class="section-title">Catering & Events</h2>
-                        <p class="section-subtitle">Sie planen ein besonderes Event? Wir bringen das Banco de Café Erlebnis zu Ihnen! Von Business-Meetings über Hochzeiten bis hin zu privaten Feiern – unser individuelles Catering verwöhnt Ihre Gäste mit frischen Matcha-Spezialitäten, aromatischen Kaffeevariationen, handgemachten Baguettes und gesunden Bowl-Kreationen. Lassen Sie uns gemeinsam Ihr Event unvergesslich machen!</p>
+                        <p class="section-subtitle">Sie planen ein besonderes Event? Wir bringen das Banco de Café Erlebnis zu Ihnen! Unser individuelles Catering verwöhnt Ihre Gäste mit frischen Matcha-Spezialitäten, handgemachten Baguettes und gesunden Bowl-Kreationen.</p>
                         <div class="catering-cta-row">
                             <a href="mailto:info@banco-de-cafe.de" class="catering-btn">Jetzt Kontaktieren</a>
                         </div>
@@ -470,7 +470,7 @@
             </div>
             <!-- Google Maps Embed ersetzt Leaflet-Map -->
             <div id="location-map-fullwidth">
-                <div style="position:relative;padding-bottom:56.25%;height:0;overflow:hidden;border-radius:12px;">
+                <div class="maps-container" style="position:relative;padding-bottom:56.25%;height:0;overflow:hidden;">
                   <iframe
                     src="https://www.google.com/maps?q=Banco%20de%20Caf%C3%A9%2C%20F%C3%BCrstenrieder%20Str.%208%2C%2080687%20M%C3%BCnchen&z=16&output=embed"
                     style="position:absolute;top:0;left:0;width:100%;height:100%;border:0;"
@@ -498,7 +498,7 @@
     <script src="drinks-carousel-indicator.js"></script>
     <script src="food-carousel-indicator.js"></script>
     <script src="navigation.js"></script>
-    <script src="debug-overlay.js"></script>
+    <!-- <script src="debug-overlay.js"></script> -->
 
     <!-- Mobile Menü Script -->
     <script>
