catreing neue nr

--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
                         <h2 class="section-title">Catering & Events</h2>
                         <p class="section-subtitle">Sie planen ein besonderes Event? Wir bringen das Banco de Café Erlebnis zu Ihnen! Unser individuelles Catering verwöhnt Ihre Gäste mit frischen Matcha-Spezialitäten, handgemachten Baguettes und gesunden Bowl-Kreationen.</p>
                         <div class="catering-cta-row">
-                            <a href="mailto:info@banco-de-cafe.de" class="catering-btn">Jetzt Kontaktieren</a>
+                            <a href="mailto:info@banco-de-cafe.de?subject=Catering%20Anfrage" class="catering-btn">Jetzt Kontaktieren</a>
                         </div>
                         <!-- Animierte Event-Symbole -->
                         <div class="floating-events">
@@ -460,11 +460,11 @@
                 <div class="kontakt-info-text">
                     <h3>Banco de Café</h3>
                     <p>Fürstenrieder Str. 8<br />80687 München</p>
-                    <p><strong>Telefon:</strong> +49 176 31115508</p>
+                    <p><strong>Telefon:</strong>+49 172 7354341</p>
                     <p><strong>E-Mail:</strong> info@banco-de-cafe.de</p>
                 </div>
                 <div class="kontakt-buttons">
-                    <a href="tel:+4917631115508" class="kontakt-btn">Anrufen</a>
+                    <a href="tel:++491727354341" class="kontakt-btn">Anrufen</a>
                     <a href="mailto:info@banco-de-cafe.de" class="kontakt-btn">E-Mail</a>
                 </div>
             </div>
