--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                 <div class="carousel" id="drinks-carousel">
                     <div class="product-card">
                         <div class="product-image">
-                            <img src="../assets/berry.webp" alt="Berry Matcha">
+                            <img src="../assets/Gruppe 1.webp" alt="Berry Matcha">
                         </div>
                         <div class="product-content">
                             <div class="product-name">Berry Matcha</div>
@@ -274,14 +274,14 @@
                                 Süße</div>
                             <div class="product-footer">
                                 <span class="product-size">300ml</span>
-                                <span class="product-price">€4,90</span>
+                                <span class="product-price">€4,95</span>
                             </div>
                         </div>
                     </div>
 
                     <div class="product-card">
                         <div class="product-image">
-                            <img src="../assets/signituure.webp" alt="Matcha Latte Signature">
+                            <img src="../assets/Gruppe 3.webp" alt="Matcha Latte Signature">
                         </div>
                         <div class="product-content">
                             <div class="product-name">Matcha Latte Signature</div>
@@ -295,7 +295,7 @@
                     </div>
                     <div class="product-card">
                         <div class="product-image">
-                            <img src="../assets/mango.webp" alt="Mango Matcha">
+                            <img src="../assets/Gruppe 4.webp" alt="Mango Matcha">
                         </div>
                         <div class="product-content">
                             <div class="product-name">Mango Matcha</div>
@@ -310,7 +310,7 @@
 
                     <div class="product-card">
                         <div class="product-image">
-                            <img src="../assets/Strawberry_matcha.webp" alt="Hojicha Matcha">
+                            <img src="../assets/Gruppe 6.webp" alt="Hojicha Matcha">
                         </div>
                         <div class="product-content">
                             <div class="product-name">Hojicha Matcha</div>
